<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:paddingHorizontal="30dp"
    android:paddingTop="35dp"
    android:paddingBottom="25dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_weight"
        style="@style/text_view_edittext"
        android:text="@string/text_weight"
        app:layout_constraintLeft_toLeftOf="@id/edit_height"
        app:layout_constraintRight_toRightOf="@id/edit_height"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_weight"
        style="@style/edit_text"
        android:layout_marginTop="5dp"
        android:hint="@string/text_exemple_weight"
        android:imeOptions="actionNext"
        android:paddingVertical="2dp"
        app:layout_constraintLeft_toLeftOf="@id/edit_height"
        app:layout_constraintRight_toRightOf="@id/edit_height"
        app:layout_constraintTop_toBottomOf="@id/text_weight" />

    <TextView
        android:id="@+id/text_height"
        style="@style/text_view_edittext"
        android:layout_marginTop="20dp"
        android:text="@string/text_height"
        app:layout_constraintLeft_toLeftOf="@id/edit_height"
        app:layout_constraintRight_toRightOf="@id/edit_height"
        app:layout_constraintTop_toBottomOf="@id/edit_weight" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_height"
        style="@style/edit_text"
        android:layout_marginTop="5dp"
        android:hint="@string/text_exemple_height"
        android:imeOptions="actionGo"
        android:paddingVertical="2dp"
        app:layout_constraintLeft_toLeftOf="@id/edit_height"
        app:layout_constraintRight_toRightOf="@id/edit_height"
        app:layout_constraintTop_toBottomOf="@id/text_height" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_calculate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_edge_button"
        android:fontFamily="@font/poppins_medium"
        android:paddingVertical="4dp"
        android:text="@string/text_button_calculate"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/edit_height"
        app:layout_constraintRight_toRightOf="@id/edit_height"
        app:layout_constraintTop_toBottomOf="@id/edit_height" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_result"
        android:layout_width="325dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edge_text"
        android:fontFamily="@font/poppins_medium"
        android:paddingTop="20dp"
        android:text="IMC: 18,5\n \nResultado:\n Peso normal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@id/edit_height"
        app:layout_constraintRight_toRightOf="@id/edit_height"
        app:layout_constraintTop_toBottomOf="@id/button_calculate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/text_result"
        android:textAlignment="inherit"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/edit_height"
        app:layout_constraintRight_toRightOf="@id/edit_height" />


</androidx.constraintlayout.widget.ConstraintLayout>